Fix #395 Add pagination in search API
- Controller pass the pageable object in findClosestSections
- update search query with the offset
- return sections ordered by semantic distance